--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
                 "easybook/geshi": "1.0.8.*"
         },
         "require-dev": {
-                "phpunit/phpunit": "4.8.*"
+                "atk14/tester": "0.3.*"
         },
         "autoload": {
 								"files": ["src/app/helpers/block.highlight_source_code.php", "src/app/helpers/modifier.highlight_source_code.php"]
